--- a/uade-01-julio-2020/css/style.css
+++ b/uade-01-julio-2020/css/style.css
@@ -39,13 +39,19 @@ body {
     display: none;
 }
 
-.cotizacion, .leyenda {
+.leyenda {
     cursor: default;
     width: 400px;
 }
 
+.cotizacion {
+    cursor: default;
+    width: 200px; 
+}
+
 .fechaCotizacion {
     margin: 30px 0 0 0;
+    width: 400px;
     cursor: default;
 }
 
@@ -59,4 +65,9 @@ body {
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.leyenda2, .leyendaVariacion {
+    cursor: default;
+    width: 250px;
 }
